--- a/src/main/res/layout-xlarge/fragment_profile.xml
+++ b/src/main/res/layout-xlarge/fragment_profile.xml
@@ -1,257 +1,284 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="in.rakhtsavelives.app.ProfileFragment">
-    <RelativeLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        android:layout_gravity="left|top">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Medium Text"
             android:id="@+id/tvName"
-            android:textSize="25dp"
-            android:layout_marginLeft="59dp"
-            android:layout_marginStart="59dp"
-            android:layout_alignBottom="@+id/tvBloodGroup"
-            android:layout_toRightOf="@+id/tvBloodGroup"
-            android:layout_toEndOf="@+id/tvBloodGroup" />
-
-        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ibProfile"
-            android:src="@drawable/icon_blank_profile_128"
-            android:background="@drawable/profile_button"
-            android:layout_below="@id/ibEdit"
-            android:layout_marginTop="25dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:text="Medium Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="35dp"
+            android:layout_above="@+id/line1"
+            android:layout_centerHorizontal="true" />
+
+        <!--  <ImageButton
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/ibProfile"
+              android:src="@drawable/icon_blank_profile_128"
+              android:background="@drawable/profile_button"
+              android:layout_below="@id/ibEdit"
+              android:layout_marginTop="25dp"
+              android:layout_alignParentRight="true"
+              android:layout_alignParentEnd="true" />-->
         <View
+            android:id="@+id/line1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/black"
-            android:id="@+id/line1"
-            android:layout_alignBottom="@+id/ibProfile"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="55dp"
-            android:layout_toLeftOf="@+id/ibProfile"
-            android:layout_toStartOf="@+id/ibProfile" />
+            android:layout_below="@id/tvBloodGroup"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/black" />
 
 
         <TextView
+            android:id="@+id/tvBloodGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="A+"
-            android:id="@+id/tvBloodGroup"
-            android:textColor="#FFF"
-            android:textStyle="bold"
             android:background="@drawable/icon_blood_64"
             android:gravity="center"
+            android:text="A+"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#FFF"
             android:textSize="20dp"
-            android:layout_alignTop="@+id/ibProfile"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-        <ScrollView
-
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/scrollView"
-            android:layout_below="@+id/ibProfile"
-            android:layout_marginTop="45dp"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true" >
+            android:layout_marginLeft="175dp"
+            android:layout_marginStart="175dp" />
+
+        <ScrollView
+
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@+id/line1"
+            android:layout_marginLeft="100dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="45dp">
 
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="Gender : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="Gender : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileGender"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:enabled="false"/>
+                        android:enabled="false" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="DOB : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="DOB : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileDOB"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:enabled="false"/>
+                        android:enabled="false" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="Weight : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="Weight : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileWeight"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:enabled="false"/>
+                        android:enabled="false" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:text="Phone No : "
                         android:layout_width="wrap_content"
-                        android:textSize="25dp"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="Phone No : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfilePhone"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:inputType="textMultiLine"
-                        android:enabled="false"/>
+                        android:enabled="false"
+                        android:inputType="textMultiLine" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="Address 1 : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="Address 1 : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileAddress1"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:inputType="textMultiLine"
-                        android:enabled="false"/>
+                        android:enabled="false"
+                        android:inputType="textMultiLine" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="Address 2 : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="Address 2 : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileAddress2"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:inputType="textMultiLine"
-                        android:enabled="false"/>
+                        android:enabled="false"
+                        android:inputType="textMultiLine" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="City : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="City : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileCity"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:inputType="textMultiLine"
-                        android:enabled="false"/>
+                        android:enabled="false"
+                        android:inputType="textMultiLine" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp">
+
                     <TextView
-                        android:textSize="25dp"
-                        android:text="State : "
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:gravity="right"/>
+                        android:gravity="right"
+                        android:text="State : "
+                        android:textSize="25dp" />
+
                     <EditText
                         android:id="@+id/etProfileState"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
-                        android:inputType="textMultiLine"
-                        android:enabled="false"/>
+                        android:enabled="false"
+                        android:inputType="textMultiLine" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="10dp"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:padding="10dp">
+
                     <Button
-                        android:textSize="25dp"
                         android:id="@+id/btnProfileUpdate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:inputType="textMultiLine"
                         android:layout_column="2"
-                        android:text="Update"
                         android:layout_gravity="center"
-                        android:visibility="invisible"/>
+                        android:inputType="textMultiLine"
+                        android:text="Update"
+                        android:textSize="25dp"
+                        android:visibility="invisible" />
                 </TableRow>
             </TableLayout>
         </ScrollView>
 
         <ImageButton
+            android:id="@+id/ibEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ibEdit"
-            android:src="@drawable/icon_edit_32"
             android:background="#FFF"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/scrollView"
-            android:layout_alignEnd="@+id/scrollView" />
+            android:src="@drawable/icon_edit_32"
+            android:layout_marginRight="60dp"
+            android:layout_marginEnd="60dp"
+            android:layout_above="@+id/tvName"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
 
